--- a/src/main.css
+++ b/src/main.css
@@ -285,22 +285,22 @@ a {
 [type='radio'][name='dir'][value='both']::before {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8 40c5.523 0 10-4.477 10-10S13.523 20 8 20v20zM21 8c0 5.523 4.477 10 10 10s10-4.477 10-10H21zM52 20c-5.523 0-10 4.477-10 10s4.477 10 10 10V20zM40 52c0-5.523-4.477-10-10-10s-10 4.477-10 10h20z' fill='%23EC7979'/%3E%3C/svg%3E");
 }
-[direction='horizontal'] [type='radio'][name='pos'][value='start']::before {
+[data-direction='horizontal'] [type='radio'][name='pos'][value='start']::before {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M10.5 13a2.5 2.5 0 0 1 0-5h39a2.5 2.5 0 0 1 0 5h-39zM8 40c5.523 0 10-4.477 10-10S13.523 20 8 20v20zm34-10c0-5.523 4.477-10 10-10v20c-5.523 0-10-4.477-10-10z' fill='%23EC7979'/%3E%3C/svg%3E");
 }
-[direction='horizontal'] [type='radio'][name='pos'][value='center']::before {
+[data-direction='horizontal'] [type='radio'][name='pos'][value='center']::before {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M52 10.5A2.5 2.5 0 0 0 49.5 8h-39a2.5 2.5 0 0 0 0 5h39a2.5 2.5 0 0 0 2.5-2.5zm0 39a2.5 2.5 0 0 0-2.5-2.5h-39a2.5 2.5 0 0 0 0 5h39a2.5 2.5 0 0 0 2.5-2.5zM52 20c-5.523 0-10 4.477-10 10s4.477 10 10 10V20zM18 30c0 5.523-4.477 10-10 10V20c5.523 0 10 4.477 10 10z' fill='%23EC7979'/%3E%3C/svg%3E");
 }
-[direction='horizontal'] [type='radio'][name='pos'][value='end']::before {
+[data-direction='horizontal'] [type='radio'][name='pos'][value='end']::before {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M49.5 47a2.5 2.5 0 0 1 0 5h-39a2.5 2.5 0 0 1 0-5h39zM52 20c-5.523 0-10 4.477-10 10s4.477 10 10 10V20zM18 30c0 5.523-4.477 10-10 10V20c5.523 0 10 4.477 10 10z' fill='%23EC7979'/%3E%3C/svg%3E");
 }
-[direction='vertical'] [type='radio'][name='pos'][value='start']::before {
+[data-direction='vertical'] [type='radio'][name='pos'][value='start']::before {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13 49.5a2.5 2.5 0 0 1-5 0v-39a2.5 2.5 0 1 1 5 0v39zM40 52c0-5.523-4.477-10-10-10s-10 4.477-10 10h20zM30 18c-5.523 0-10-4.477-10-10h20c0 5.523-4.477 10-10 10z' fill='%23EC7979'/%3E%3C/svg%3E");
 }
-[direction='vertical'] [type='radio'][name='pos'][value='center']::before {
+[data-direction='vertical'] [type='radio'][name='pos'][value='center']::before {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M40 52c0-5.523-4.477-10-10-10s-10 4.477-10 10h20zm-29.5 0a2.5 2.5 0 0 0 2.5-2.5v-39a2.5 2.5 0 0 0-5 0v39a2.5 2.5 0 0 0 2.5 2.5zm39 0a2.5 2.5 0 0 0 2.5-2.5v-39a2.5 2.5 0 0 0-5 0v39a2.5 2.5 0 0 0 2.5 2.5zM30 18c-5.523 0-10-4.477-10-10h20c0 5.523-4.477 10-10 10z' fill='%23EC7979'/%3E%3C/svg%3E");
 }
-[direction='vertical'] [type='radio'][name='pos'][value='end']::before {
+[data-direction='vertical'] [type='radio'][name='pos'][value='end']::before {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M47 10.5a2.5 2.5 0 0 1 5 0v39a2.5 2.5 0 0 1-5 0v-39zM20 8c0 5.523 4.477 10 10 10s10-4.477 10-10H20zm10 34c5.523 0 10 4.477 10 10H20c0-5.523 4.477-10 10-10z' fill='%23EC7979'/%3E%3C/svg%3E");
 }
 [type='radio'][name='split'][value='dashed']::before {
