feat: Modify components to become tsx files

--- a/styles/app.css
+++ b/styles/app.css
@@ -21,6 +21,17 @@ body,
   color: #2c3e50;
 }
 
+.page-slide-enter-active,
+.page-slide-leave-active {
+  transition: all 0.2s ease-in-out;
+}
+
+.page-slide-enter-from,
+.page-slide-leave-to {
+  opacity: 0.5;
+  transform: translateX(5vw);
+}
+
 a {
   color: var(--theme);
 }
